--- a/templates/deletemenuitem.html
+++ b/templates/deletemenuitem.html
@@ -7,7 +7,7 @@
 
 Are you sure you want to delete {{item.name}}?
 
-<input type='submit' value="Confirm">
+<br><input type='submit' value="Confirm"></br>
 
 </form>
 
