--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,9 +4,14 @@
 </head>
 
 <body>
+  <div class="pane">
+    <div class="header">
+      <h1>{{restaurant.name}}</h1>
+    </div>
 
-<h1>{{restaurant.name}}</h1>
+    <a href = {{ url_for('newMenuItem', restaurant_id=restaurant.id) }}>Create a new menu item</a>
 
+<div class="flash">
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 <ul>
@@ -16,31 +21,33 @@
 </ul>
 {% endif %}
 {% endwith %}
+</div>
 
-<p><a href = {{ url_for('newMenuItem', restaurant_id=restaurant.id) }}>Create a new menu item</a></p>
-
-<br></br>
 
 {% for i in items %}
 
-<div>
+<div class="nameandprice">
 
-<p>{{i.name}}</br>
+<span class="name"><p>{{i.name}}</p></span>
 
-<br>{{i.description}}</br>
+<span class="price"><p>{{i.price}}</p></span>
 
-<br> {{i.price}} </br>
+<span clss="description"><p>{{i.description}}</p></span>
+
+</div>
+
+<div class="editdeletepane">
 
 <br><a href={{ url_for('editMenuItem', restaurant_id=restaurant.id, menu_id=i.id) }}>Edit</a></br>
 
 <br><a href = {{ url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=i.id) }}>Delete</a></br>
 
-<br></br></p>
-
 </div>
 
 
 {% endfor %}
+
+</div>
 </body>
 
 </html>
