--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -2,9 +2,15 @@
 <body>
   <h1>Add a Menu Item</h1>
   <form action="#" method='post'>
-    <p>Name:</p>
-    <input type=text size="30" name="name" placeholder="New Menu Item Name">
-    <input type=submit value="Submit">
+    <p>Name: <input type=text size="30" name="name" placeholder="New Menu Item Name"></p>
+    <p>Description: <input type='text' size="30" name="description" placeholder="New Menu Item Description"></p>
+    <p>Price: <input type="text" size "30" name="price" placeholder="New Menu Item Price"></p>
+    <p>Course:<br>
+      <input type="radio" name="course" value="Appetizer">Appetizer<br>
+      <input type="radio" name="course" value="Entree">Entree<br>
+      <input type="radio" name="course" value="Dessert">Dessert<br>
+      <input type="radio" name="course" value="Beverage">Beverage<br>
+    <p><input type=submit value="Create"></p>
     <p><a href="#">Cancel</a></p>
   </form>
 </body>
