--- a/templates/deleteRestaurant.html
+++ b/templates/deleteRestaurant.html
@@ -6,7 +6,7 @@
 
     <form action="#" method='post'>
       <br>Are you sure you want to delete {{restaurant.name}}? <input type='submit' value='Submit'></br>
-      <p><a href="#">Cancel</a></p>
+      <p><a href="{{ url_for('showRestaurants') }}">Cancel</a></p>
     </form>
 </body>
 </html>
