--- a/templates/deletemenuitem.html
+++ b/templates/deletemenuitem.html
@@ -7,7 +7,7 @@
   <p>Are you sure you want to delete {{item.name}}?</p>
     <form action="#" method='post'>
       <br><input type='submit' value='Submit'></br>
-      <br><a href="#">Cancel</a></br>
+      <br><a href="{{ (url_for('showMenu', restaurant_id=restaurant.id) )}}">Cancel</a></br>
     </form>
 </body>
 </html>
