--- a/templates/editRestaurant.html
+++ b/templates/editRestaurant.html
@@ -7,7 +7,7 @@
     <form action="#" method='post'>
       <br>Updated Name: <input type='text' name='name' size='30' placeholder='{{restaurant.name}}'></br>
       <br><input type='submit' value='Submit'></br>
-      <p><a href="#">Cancel</a></p>
+      <p><a href="{{ url_for('showRestaurants') }}">Cancel</a></p>
     </form>
 </body>
 </html>
