--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -7,7 +7,7 @@
     <form action="#" method='post'>
       <br><input type='text' name='name' size='30' placeholder='{{item.name}}'>
       <br><input type='submit' value='Submit'>
-      <br><a href="#">Cancel</a></br>
+      <br><a href="{{ url_for('showMenu', restaurant_id=restaurant.id) }}">Cancel</a></br>
     </form>
 </body>
 </html>
