--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,11 +6,11 @@
     <p>{{i.name}}
       <br>{{i.description}}</br>
       <br>{{i.price}}</br>
-      <br><a href="#">Edit</a></br>
-      <br><a href="#">Delete</a></br>
+      <br><a href="{{ url_for( 'editMenuItem', restaurant_id=restaurant.id, menu_id=i.id ) }}">Edit</a></br>
+      <br><a href="{{ url_for( 'deleteMenuItem', restaurant_id=restaurant.id, menu_id=i.id ) }}">Delete</a></br>
   {% endfor %}
 
-  <p><a href="#">Create New Item</a></p>
+  <p><a href="{{ url_for('newMenuItem', restaurant_id=restaurant.id) }}">Create New Item</a></p>
 
 </body>
 </html>
