--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -2,9 +2,9 @@
 <body>
   <h1>Restaurants</h1>
   {% for i in restaurants %}
-    <h3><a href='#'>{{i.name}}</a></h3>
-      <a href='#'>Edit</a>
-      <br><a href='#'>Delete</a></br>
+    <h3><a href="{{ url_for('showMenu', restaurant_id=i.id) }}">{{i.name}}"</a></h3>
+      <a href="{{ url_for('editRestaurant', restaurant_id=i.id) }}">Edit</a>
+      <br><a href="{{ url_for('deleteRestaurant', restaurant_id=i.id) }}">Delete</a></br>
   {% endfor %}
 
 
