--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -1,6 +1,7 @@
 <html>
 <body>
   <h1>Restaurants</h1>
+  <p><a href="{{ url_for('newRestaurant') }}">Create a new restaurant</a></p>
   {% for i in restaurants %}
     <h3><a href="{{ url_for('showMenu', restaurant_id=i.id) }}">{{i.name}}"</a></h3>
       <a href="{{ url_for('editRestaurant', restaurant_id=i.id) }}">Edit</a>
