--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -3,7 +3,7 @@
   <h1>Restaurants</h1>
   <p><a href="{{ url_for('newRestaurant') }}">Create a new restaurant</a></p>
   {% for i in restaurants %}
-    <h3><a href="{{ url_for('showMenu', restaurant_id=i.id) }}">{{i.name}}"</a></h3>
+    <h3><a href="{{ url_for('showMenu', restaurant_id=i.id) }}">{{i.name}}</a></h3>
       <a href="{{ url_for('editRestaurant', restaurant_id=i.id) }}">Edit</a>
       <br><a href="{{ url_for('deleteRestaurant', restaurant_id=i.id) }}">Delete</a></br>
   {% endfor %}
