--- a/templates/deletemenuitem.html
+++ b/templates/deletemenuitem.html
@@ -5,7 +5,7 @@
   <h1>Delete Menu Item</h1>
 
   <p>Are you sure you want to delete {{item.name}}?</p>
-    <form action="#" method='post'>
+    <form action="{{ url_for('deleteMenuItem', restaurant_id=restaurant.id, menu_id=item.id)}}" method='post'>
       <br><input type='submit' value='Submit'></br>
       <br><a href="{{ (url_for('showMenu', restaurant_id=restaurant.id) )}}">Cancel</a></br>
     </form>
