--- a/templates/editRestaurant.html
+++ b/templates/editRestaurant.html
@@ -4,7 +4,7 @@
 
   <h1>Edit {{restaurant.name}}</h1>
 
-    <form action="#" method='post'>
+    <form action="{{ url_for('editRestaurant', restaurant_id=restaurant.id) }}" method='post'>
       <br>Updated Name: <input type='text' name='name' size='30' placeholder='{{restaurant.name}}'></br>
       <br><input type='submit' value='Submit'></br>
       <p><a href="{{ url_for('showRestaurants') }}">Cancel</a></p>
