--- a/templates/editmenuitem.html
+++ b/templates/editmenuitem.html
@@ -4,7 +4,7 @@
 
   <h1>Edit Menu Item</h1>
 
-    <form action="#" method='post'>
+    <form action="{{ url_for('editMenuItem', restaurant_id=restaurant.id, menu_id=item.id) }}" method='post'>
       <br><input type='text' name='name' size='30' placeholder='{{item.name}}'>
       <br><input type='submit' value='Submit'>
       <br><a href="{{ url_for('showMenu', restaurant_id=restaurant.id) }}">Cancel</a></br>
