--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -1,6 +1,17 @@
 <html>
 <body>
   <h1>Restaurants</h1>
+
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      <ul>
+        {% for message in messages %}
+          <li><strong>{{ message }}</strong></li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  {% endwith %}
+
   <p><a href="{{ url_for('newRestaurant') }}">Create a new restaurant</a></p>
   {% for i in restaurants %}
     <h3><a href="{{ url_for('showMenu', restaurant_id=i.id) }}">{{i.name}}</a></h3>
