--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,28 +1,42 @@
 <html>
+<head>
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css')}}">
+</head>
 <body>
-  <h1>{{restaurant.name}}</h1>
+  <div class="menu">
+    <div class="header">
+      <h1>{{restaurant.name}}</h1>
 
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}
-      <ul>
-        {% for message in messages %}
-          <li><strong>{{ message }}</strong></li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <ul>
+            {% for message in messages %}
+              <li><strong>{{ message }}</strong></li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+    </div> <!--header-->
 
-  <p><a href="{{ url_for('newMenuItem', restaurant_id=restaurant.id) }}">Create New Item</a></p>
+    <div class="new">
+      <p><a href="{{ url_for('newMenuItem', restaurant_id=restaurant.id) }}">Create New Item</a></p>
+    </div> <!--new div-->
 
-  <p></p>
-
-  {% for i in items %}
-    <p>{{i.name}}
-      <br>{{i.description}}</br>
-      <br>{{i.price}}</br>
-      <br><a href="{{ url_for( 'editMenuItem', restaurant_id=restaurant.id, menu_id=i.id ) }}">Edit</a></br>
-      <br><a href="{{ url_for( 'deleteMenuItem', restaurant_id=restaurant.id, menu_id=i.id ) }}">Delete</a></br>
-  {% endfor %}
-
+    {% for i in items %}
+      <div class="section">
+        <div class="price">
+          <p>{{i.price}}</p>
+        </div>
+        <div class="name">
+          <h3>{{i.name}}</h3>
+          <p>{{i.description}}</p>
+        </div> <!--name class-->
+        <div class="interactive">
+          <br><a href="{{ url_for( 'editMenuItem', restaurant_id=restaurant.id, menu_id=i.id ) }}">Edit</a></br>
+          <br><a href="{{ url_for( 'deleteMenuItem', restaurant_id=restaurant.id, menu_id=i.id ) }}">Delete</a></br>
+        </div> <!--interactive class-->
+    {% endfor %}
+      </div> <!--section-->
+  </div> <!--menu-->
 </body>
 </html>
