--- a/templates/newmenuitem.html
+++ b/templates/newmenuitem.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css')}}">
+</head>
 <body>
   <h1>Add a Menu Item</h1>
   <form action="{{ url_for('newMenuItem', restaurant_id=restaurant.id) }}" method='post'>
