--- a/templates/deleteRestaurant.html
+++ b/templates/deleteRestaurant.html
@@ -7,7 +7,8 @@
   <h1>Delete Restaurant</h1>
 
     <form action="{{ url_for('deleteRestaurant', restaurant_id=restaurant.id) }}" method='post'>
-      <br>Are you sure you want to delete {{restaurant.name}}? <input type='submit' value='Submit'></br>
+      <p>Are you sure you want to delete {{restaurant.name}}? 
+      <p><input type='submit' value='Submit'>
       <p><a href="{{ url_for('showRestaurants') }}">Cancel</a></p>
     </form>
 </body>
